@@ -1,3 +1,12 @@
+2022-08-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* device/include/stdbit.h,
+	  device/lib/incl.mk,
+	  device/lib/__stdc_bit_ceilull.c,
+	  device/lib/__stdc_bit_widthull.c,
+	  support/regression/tests/bitcount.c.in:
+	  Provide bit and byte utilitites bit width floor and ceiling functions.
+
 2022-08-05 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* device/include/stddef.h:
